tests/ui/dst/issue-90528-unsizing-suggestion-4.stderr
error[E0277]: the trait bound `[u8; 1]: Write` is not satisfied
  --> $DIR/issue-90528-unsizing-suggestion-4.rs:14:17
   |
LL |     wants_write(x);
   |     ----------- ^ the trait `Write` is not implemented for `[u8; 1]`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Write` is implemented for `&mut [u8]`
note: required by a bound in `wants_write`
  --> $DIR/issue-90528-unsizing-suggestion-4.rs:10:24
   |
LL | fn wants_write(_: impl Write) {}
   |                        ^^^^^ required by this bound in `wants_write`
help: convert the array to a `&mut [u8]` slice instead
   |
LL |     wants_write(&mut x[..]);
   |                 ++++  ++++

error[E0277]: the trait bound `&mut [u8; 1]: Write` is not satisfied
  --> $DIR/issue-90528-unsizing-suggestion-4.rs:16:17
   |
LL |     wants_write(&mut x);
   |     ----------- ^^^^^^ the trait `Write` is not implemented for `&mut [u8; 1]`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Write` is implemented for `&mut [u8]`
note: required by a bound in `wants_write`
  --> $DIR/issue-90528-unsizing-suggestion-4.rs:10:24
   |
LL | fn wants_write(_: impl Write) {}
   |                        ^^^^^ required by this bound in `wants_write`
help: convert the array to a `&mut [u8]` slice instead
   |
LL |     wants_write(&mut x[..]);
   |                       ++++

error[E0277]: the trait bound `&mut [u8; 1]: Write` is not satisfied
  --> $DIR/issue-90528-unsizing-suggestion-4.rs:21:17
   |
LL |     wants_write(x);
   |     ----------- ^ the trait `Write` is not implemented for `&mut [u8; 1]`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Write` is implemented for `&mut [u8]`
note: required by a bound in `wants_write`
  --> $DIR/issue-90528-unsizing-suggestion-4.rs:10:24
   |
LL | fn wants_write(_: impl Write) {}
   |                        ^^^^^ required by this bound in `wants_write`
help: convert the array to a `&mut [u8]` slice instead
   |
LL |     wants_write(&mut x[..]);
   |                 ++++  ++++

error[E0277]: the trait bound `[u8; 1]: Write` is not satisfied
  --> $DIR/issue-90528-unsizing-suggestion-4.rs:23:17
   |
LL |     wants_write(*x);
   |     ----------- ^^ the trait `Write` is not implemented for `[u8; 1]`
   |     |
   |     required by a bound introduced by this call
   |
   = help: the trait `Write` is implemented for `&mut [u8]`
note: required by a bound in `wants_write`
  --> $DIR/issue-90528-unsizing-suggestion-4.rs:10:24
   |
LL | fn wants_write(_: impl Write) {}
   |                        ^^^^^ required by this bound in `wants_write`
help: convert the array to a `&mut [u8]` slice instead
   |
LL |     wants_write(&mut *x[..]);
   |                 ++++   ++++

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0277`.
